--- a/projekt/index.css
+++ b/projekt/index.css
@@ -1,5 +1,5 @@
 body{
-    background-color: cornflowerblue;
+    background-color: cadetblue;
     font-family: Calibri;
     font-size: 18px;
     margin: 25px;
@@ -14,3 +14,22 @@ td, th{
     padding: 10px 5px;
 }
 
+input{
+    background-color: azure;
+}
+
+input [type = "tekst"]{
+    width: 100%;
+}
+
+input [type = "radio"]{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+button {
+    height: 25px;
+    width: 100px;
+}
